try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -74,7 +74,7 @@
 
 .amanox {
     position: center;
-    width: 100%;
+    width: 50%;
     animation-duration: 4s;
     animation-name: amanox;
     animation-timing-function: ease-out;
